# trade-copier

./: AGENTS.md  README.md  config.example.yaml  config.yaml  initial_project_requirements.md  pyproject.toml
app/: __init__.py  config.py  copier.py  main.py  models.py  server.py
app/ui/: __init__.py  copies_panel.py  instances_panel.py  log_panel.py  main_window.py  rules_panel.py
docs/: e2e-test-plan.md  implementation-plan.md
mq4/Experts/: TradeCopierEA.mq4
mq5/: SimpleJson.mqh  TradeCopierEA.mq5
mq5/Experts/: TradeCopierEA.mq5
mq5/Include/: SimpleJson.mqh  Sockets.mqh
mql/: TradeCopierEA.mq4
mql_reference/: BullseyeLiveTrading.mq4  BullseyeLiveTrading.mq5
tests/: conftest.py  test_config.py  test_copier.py  test_integration.py  test_models.py  test_server.py
